# librus_desktop

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app_state.rs  lib.rs  main.rs  session.rs  updater.rs
src/api/: auth.rs  client.rs  constants.rs  endpoints.rs  messages_auth.rs  mod.rs  models.rs
tests/: test_auth.rs  test_constants.rs  test_debug.rs  test_integration.rs  test_messages.rs  test_models.rs
ui/: announcements.slint  app.slint  attendance.slint  dashboard.slint  grades.slint  homework.slint  login.slint  messages.slint  sidebar.slint  style.slint  synergia_credentials_dialog.slint  timetable.slint
