[package]
name = "librus-front"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
urlencoding = "2"
slint = { version = "1.9", features = ["renderer-skia"] }
directories = "5.0"
roxmltree = "0.20"
base64 = "0.22.1"
encoding_rs = "0.8.35"

[build-dependencies]
slint-build = "1.9"
